fix spacing 2

--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ hr {
 
 /* about section */
 .about-header {
-    margin-top: -4vw;
+    margin-top: -3vw;
 }
 
 .about-container {
